# entities

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  docker-compose.example.yml  docker-compose.yml  generate_docker_compose.py  pyproject.toml  requirements.txt  start.py  start_orchestration.py
.github/workflows/: ci.yml
docs/: boot_strap.md
scripts/: bootstrap_admin.py  bootstrap_default_assistant.py  create_user.py  generate_docker_compose.py  version_control.py
